--- a/src/scss/utils/_animations.scss
+++ b/src/scss/utils/_animations.scss
@@ -22,12 +22,3 @@
     transform: scaleY(1);
   }
 }
-
-@include keyframes(fadeIn) {
-  0% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
-}
